# GL_Ants

./: CMakeLists.txt  README.md
shaders/: anthill_food_render.comp  ants.comp  input.comp  render.comp  render_pass_af.comp  render_pass_ants.comp
src/: Ant.h  CMakeLists.txt  Simulation.cpp  Simulation.h  config.h  main.cpp
